--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ github_username:  vdaron
 # Build settings
 markdown: kramdown
 theme: bulma-clean-theme
+remote_theme: chrisrhymes/bulma-clean-theme
 plugins:
   - jekyll-feed
 
