--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,9 @@
 # in the templates via {{ site.myvariable }}.
 title: SimpleStack - Clean and Simple ORM
 email: info@simplestack.org
+gh_sponsor: vdaron
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  SimpleStack is a simple ORM for dotnet core based on Dapper project. Sql Query Generator
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://simplestack.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: simplestack
