--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://simplestack.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: simplestack
-github_username:  vdaron
-
+# github_username:  vdaron
+google_analytics: UA-160295324-1
 # Build settings
 markdown: kramdown
 #theme: bulma-clean-theme
