--- a/_data/home_menu.yml
+++ b/_data/home_menu.yml
@@ -24,4 +24,4 @@
     - name: Issues Tracker
       link: https://github.com/SimpleStack/simplestack.orm/issues
     - name: Contributors
-      link: /contributors.html
+      link: /contributors/
