--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,5 @@
-- name: Twitter
-  link: https://twitter.com/simplestackproj
-  icon: fa-smile-wink
-- name: License
-  link: https://raw.githubusercontent.com/SimpleStack/simplestack.orm/develop/LICENSE
-- name: Github
-  link: https://github.com/simplestack/simplestack.orm
+#- name: Twitter
+#  link: https://twitter.com/simplestackproj
+#  icon: fa-smile-wink
+#- name: Github
+#  link: https://github.com/simplestack/simplestack.orm
