--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: SimpleStack - Clean and Simple ORM
+title: SimpleStack
 email: info@simplestack.org
 #gh_sponsor: vdaron
 description: >- # this means to ignore newlines until "baseurl:"
